--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ pandas==0.25.3
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
-Pillow==5.3.0
+Pillow>=6.2.2
 progress==1.5
 prompt-toolkit==2.0.10
 pthflops==0.2.2
